argocd-resources/helloworld/helloworld-istio/destinationrule-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-canary
spec:
  host: helloworld-canary.helloworld.svc.cluster.local
  subsets:
  - name: v1
    labels:        
      version: v1
  - name: v2
    labels:        
      version: v2
