argocd-resources/helloworld/helloworld-istio/destinationrule-stable.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld.helloworld.svc.cluster.local
  subsets:
  - name: v1
    labels:        
      version: v1
  - name: v2
    labels:        
      version: v2
