argocd-resources/helloworld/helloworld-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
  namespace: istio-system
spec:
  hosts:
  - helloworld-v1.fperod.internal
  - helloworld-v2.fperod.internal
  gateways:
  - ingressgateway
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: helloworld-stable.helloworld.svc.cluster.local
        port:
          number: 5000
      weight: 100
    - destination:
        host: helloworld-canary.helloworld.svc.cluster.local
        port:
          number: 5000
      weight: 0
